added stat tooltips for character screen

--- a/src/main/resources/assets/mmorpg/lang/en_us.json
+++ b/src/main/resources/assets/mmorpg/lang/en_us.json
@@ -248,6 +248,7 @@
 	"item.mmorpg.runes.yun": "Yun Rune",
 	"item.mmorpg.salvage_hammer": "Salvage Hammer",
 	"item.mmorpg.socket_extractor": "Gem Socket Extractor Tool",
+	"item.mmorpg.tp_back": "Pearl of Home",
 
 "_comment": " [CATEGORY]: MISC - NAMES",
 
@@ -1355,7 +1356,6 @@
 	"mmorpg.gearslot.necklace": "Necklace",
 	"mmorpg.gearslot.pants": "Pants",
 	"mmorpg.gearslot.ring": "Ring",
-	"mmorpg.gearslot.scepter": "Staff",
 	"mmorpg.gearslot.shield": "Shield",
 	"mmorpg.gearslot.staff": "Staff",
 	"mmorpg.gearslot.sword": "Sword",
