bosses should work now, needs testing

--- a/src/main/resources/assets/mmorpg/lang/manual.json
+++ b/src/main/resources/assets/mmorpg/lang/manual.json
@@ -79,6 +79,8 @@
 "entity.mmorpg.zombie": "Zombie",
 "entity.mmorpg.spirit_wolf": "Spirit Wolf",
 "entity.mmorpg.skeleton": "Skeleton",
+"entity.mmorpg.thorny_minion": "Thorn Minion",
+"entity.mmorpg.explody_minion": "TNT Minion",
 
 "entity.mmorpg.boss_golem": "Corrupted Golem",
 
