asc classes first pass done

--- a/src/main/resources/assets/mmorpg/lang/en_us.json
+++ b/src/main/resources/assets/mmorpg/lang/en_us.json
@@ -223,86 +223,6 @@
 "_comment": " [CATEGORY]: MISC - NAMES",
 
 
-"_comment": " [CATEGORY]: AFFIXES - NAMES",
-
-	"mmorpg.affix.archeologists": "Archeologist's",
-	"mmorpg.affix.armored_mobs": "Armored",
-	"mmorpg.affix.azure": "Azure",
-	"mmorpg.affix.chaos_ele_dmg_jewelry": "Of Venom",
-	"mmorpg.affix.chaos_ele_mobs": "Of Diseases",
-	"mmorpg.affix.chaos_res": "Of the Snake",
-	"mmorpg.affix.chaos_wep_dmg": "Poisoned",
-	"mmorpg.affix.chaos_wep_dmg_dun": "Poisonous",
-	"mmorpg.affix.crit_prefix": "Critical",
-	"mmorpg.affix.desolation": "Desolation",
-	"mmorpg.affix.energy_reg": "Invirogating",
-	"mmorpg.affix.fire_ele_dmg_jewelry": "Of Embers",
-	"mmorpg.affix.fire_ele_mobs": "Of Embers",
-	"mmorpg.affix.fire_res": "Of the Drake",
-	"mmorpg.affix.fire_spell_ele_dmg": "Scorched",
-	"mmorpg.affix.fire_wep_dmg": "Scorched",
-	"mmorpg.affix.fire_wep_dmg_dun": "Burning",
-	"mmorpg.affix.focused": "Focused",
-	"mmorpg.affix.glimmering": "Glimmering",
-	"mmorpg.affix.heal_crit_dmg_prefix": "Inspiring",
-	"mmorpg.affix.heal_crit_prefix": "Truthful",
-	"mmorpg.affix.heal_suff": "Of Restoration",
-	"mmorpg.affix.item_both_armor": "Reinforced",
-	"mmorpg.affix.item_both_dodge": "Scaled",
-	"mmorpg.affix.item_both_magic_shield": "Fortified",
-	"mmorpg.affix.item_flat_armor": "Reinforced",
-	"mmorpg.affix.item_flat_dodge": "Scaled",
-	"mmorpg.affix.item_flat_magic_shield": "Fortified",
-	"mmorpg.affix.item_perc_armor": "Reinforced",
-	"mmorpg.affix.item_perc_dodge": "Scaled",
-	"mmorpg.affix.item_perc_magic_shield": "Fortified",
-	"mmorpg.affix.life_on_hit_dun": "Of Vampires",
-	"mmorpg.affix.lightning_res": "Of the Yeti",
-	"mmorpg.affix.lightning_spell_ele_dmg": "Poisoned",
-	"mmorpg.affix.mana_reg": "Soothing",
-	"mmorpg.affix.mana_thief": "Mana Thief's",
-	"mmorpg.affix.of_affluence": "Of Affluence",
-	"mmorpg.affix.of_brutality": "Of Brutality",
-	"mmorpg.affix.of_consumption": "Of Consumption",
-	"mmorpg.affix.of_devastation": "Of Devastation",
-	"mmorpg.affix.of_energy": "Of Energy",
-	"mmorpg.affix.of_fast_cast": "Of Faster Casting",
-	"mmorpg.affix.of_gluttony": "Of Gluttony",
-	"mmorpg.affix.of_less_cd": "Of Repetition",
-	"mmorpg.affix.of_mana": "Of Mana",
-	"mmorpg.affix.of_pene": "Of Penetration",
-	"mmorpg.affix.of_spell_dmg": "Of Spell Damage",
-	"mmorpg.affix.of_spirit_markings": "Of Spirit Markings",
-	"mmorpg.affix.of_the_philosopher": "Of the Philosopher",
-	"mmorpg.affix.of_the_sky": "Of the Sky",
-	"mmorpg.affix.of_the_titan": "Of the Titan",
-	"mmorpg.affix.of_the_troll": "Of The Troll",
-	"mmorpg.affix.of_the_wind": "Of the Wind",
-	"mmorpg.affix.of_treasure": "Of Treasure",
-	"mmorpg.affix.of_vampirism": "Of Vampirism",
-	"mmorpg.affix.physical_wep_dmg": "Tyrannical",
-	"mmorpg.affix.physical_wep_dmg_dun": "Tyrannical",
-	"mmorpg.affix.precise": "Precise",
-	"mmorpg.affix.scavanger": "Scavanger",
-	"mmorpg.affix.seraphim": "Seraphim's",
-	"mmorpg.affix.strong_dex_armor_suf": "Of Skill",
-	"mmorpg.affix.strong_int_armor_suf": "Of the Genius",
-	"mmorpg.affix.strong_str_armor_suf": "Of the Monster",
-	"mmorpg.affix.true_hit": "True Hit",
-	"mmorpg.affix.vampiric": "Vampiric",
-	"mmorpg.affix.water_ele_dmg_jewelry": "Of Ice",
-	"mmorpg.affix.water_ele_mobs": "Of Frost",
-	"mmorpg.affix.water_res": "Of the Storm",
-	"mmorpg.affix.water_spell_ele_dmg": "Chilled",
-	"mmorpg.affix.water_wep_dmg": "Chilled",
-	"mmorpg.affix.water_wep_dmg_dun": "Freezing",
-	"mmorpg.affix.wep_item_both": "Miserable",
-	"mmorpg.affix.wep_item_flat": "Deadly",
-	"mmorpg.affix.wep_item_perc": "Cruel",
-
-"_comment": " [CATEGORY]: AFFIXES - NAMES",
-
-
 "_comment": " [CATEGORY]: SPELLS - NAMES",
 
 	"mmorpg.aura.armor": "Armor Aura",
@@ -420,6 +340,86 @@
 "_comment": " [CATEGORY]: SPELLS - NAMES",
 
 
+"_comment": " [CATEGORY]: AFFIXES - NAMES",
+
+	"mmorpg.affix.archeologists": "Archeologist's",
+	"mmorpg.affix.armored_mobs": "Armored",
+	"mmorpg.affix.azure": "Azure",
+	"mmorpg.affix.chaos_ele_dmg_jewelry": "Of Venom",
+	"mmorpg.affix.chaos_ele_mobs": "Of Diseases",
+	"mmorpg.affix.chaos_res": "Of the Snake",
+	"mmorpg.affix.chaos_wep_dmg": "Poisoned",
+	"mmorpg.affix.chaos_wep_dmg_dun": "Poisonous",
+	"mmorpg.affix.crit_prefix": "Critical",
+	"mmorpg.affix.desolation": "Desolation",
+	"mmorpg.affix.energy_reg": "Invirogating",
+	"mmorpg.affix.fire_ele_dmg_jewelry": "Of Embers",
+	"mmorpg.affix.fire_ele_mobs": "Of Embers",
+	"mmorpg.affix.fire_res": "Of the Drake",
+	"mmorpg.affix.fire_spell_ele_dmg": "Scorched",
+	"mmorpg.affix.fire_wep_dmg": "Scorched",
+	"mmorpg.affix.fire_wep_dmg_dun": "Burning",
+	"mmorpg.affix.focused": "Focused",
+	"mmorpg.affix.glimmering": "Glimmering",
+	"mmorpg.affix.heal_crit_dmg_prefix": "Inspiring",
+	"mmorpg.affix.heal_crit_prefix": "Truthful",
+	"mmorpg.affix.heal_suff": "Of Restoration",
+	"mmorpg.affix.item_both_armor": "Reinforced",
+	"mmorpg.affix.item_both_dodge": "Scaled",
+	"mmorpg.affix.item_both_magic_shield": "Fortified",
+	"mmorpg.affix.item_flat_armor": "Reinforced",
+	"mmorpg.affix.item_flat_dodge": "Scaled",
+	"mmorpg.affix.item_flat_magic_shield": "Fortified",
+	"mmorpg.affix.item_perc_armor": "Reinforced",
+	"mmorpg.affix.item_perc_dodge": "Scaled",
+	"mmorpg.affix.item_perc_magic_shield": "Fortified",
+	"mmorpg.affix.life_on_hit_dun": "Of Vampires",
+	"mmorpg.affix.lightning_res": "Of the Yeti",
+	"mmorpg.affix.lightning_spell_ele_dmg": "Poisoned",
+	"mmorpg.affix.mana_reg": "Soothing",
+	"mmorpg.affix.mana_thief": "Mana Thief's",
+	"mmorpg.affix.of_affluence": "Of Affluence",
+	"mmorpg.affix.of_brutality": "Of Brutality",
+	"mmorpg.affix.of_consumption": "Of Consumption",
+	"mmorpg.affix.of_devastation": "Of Devastation",
+	"mmorpg.affix.of_energy": "Of Energy",
+	"mmorpg.affix.of_fast_cast": "Of Faster Casting",
+	"mmorpg.affix.of_gluttony": "Of Gluttony",
+	"mmorpg.affix.of_less_cd": "Of Repetition",
+	"mmorpg.affix.of_mana": "Of Mana",
+	"mmorpg.affix.of_pene": "Of Penetration",
+	"mmorpg.affix.of_spell_dmg": "Of Spell Damage",
+	"mmorpg.affix.of_spirit_markings": "Of Spirit Markings",
+	"mmorpg.affix.of_the_philosopher": "Of the Philosopher",
+	"mmorpg.affix.of_the_sky": "Of the Sky",
+	"mmorpg.affix.of_the_titan": "Of the Titan",
+	"mmorpg.affix.of_the_troll": "Of The Troll",
+	"mmorpg.affix.of_the_wind": "Of the Wind",
+	"mmorpg.affix.of_treasure": "Of Treasure",
+	"mmorpg.affix.of_vampirism": "Of Vampirism",
+	"mmorpg.affix.physical_wep_dmg": "Tyrannical",
+	"mmorpg.affix.physical_wep_dmg_dun": "Tyrannical",
+	"mmorpg.affix.precise": "Precise",
+	"mmorpg.affix.scavanger": "Scavanger",
+	"mmorpg.affix.seraphim": "Seraphim's",
+	"mmorpg.affix.strong_dex_armor_suf": "Of Skill",
+	"mmorpg.affix.strong_int_armor_suf": "Of the Genius",
+	"mmorpg.affix.strong_str_armor_suf": "Of the Monster",
+	"mmorpg.affix.true_hit": "True Hit",
+	"mmorpg.affix.vampiric": "Vampiric",
+	"mmorpg.affix.water_ele_dmg_jewelry": "Of Ice",
+	"mmorpg.affix.water_ele_mobs": "Of Frost",
+	"mmorpg.affix.water_res": "Of the Storm",
+	"mmorpg.affix.water_spell_ele_dmg": "Chilled",
+	"mmorpg.affix.water_wep_dmg": "Chilled",
+	"mmorpg.affix.water_wep_dmg_dun": "Freezing",
+	"mmorpg.affix.wep_item_both": "Miserable",
+	"mmorpg.affix.wep_item_flat": "Deadly",
+	"mmorpg.affix.wep_item_perc": "Cruel",
+
+"_comment": " [CATEGORY]: AFFIXES - NAMES",
+
+
 "_comment": " [CATEGORY]: ONEOFAKIND - NAMES",
 
 	"mmorpg.one_of_a_kind.arrow_storm_mod": "Arrow Storm Modifier",
@@ -511,6 +511,15 @@
 "_comment": " [CATEGORY]: RARITIES - NAMES",
 
 
+"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
+
+	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
+	"item.mmorpg.currency.orb_of_linking": "Orb of Linking",
+	"item.mmorpg.currency.socket_adder": "Orb of Digging",
+
+"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
+
+
 "_comment": " [CATEGORY]: STATUSEFFECTS - NAMES",
 
 	"effect.mmorpg.beneficial.1": "Antidote",
@@ -546,15 +555,6 @@
 	"mmorpg.ailment.poison": "Poison",
 
 "_comment": " [CATEGORY]: STATUSEFFECTS - NAMES",
-
-
-"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
-
-	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
-	"item.mmorpg.currency.orb_of_linking": "Orb of Linking",
-	"item.mmorpg.currency.socket_adder": "Orb of Digging",
-
-"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
 
 
 "_comment": " [CATEGORY]: TALENTS - NAMES",
@@ -1006,14 +1006,16 @@
 	"mmorpg.stat.all_water_damage": "Cold Damage",
 	"mmorpg.stat.area_cdr": "Area Spell Cooldown Reduction",
 	"mmorpg.stat.area_dmg": "Area Damage",
-	"mmorpg.stat.area_spell_dmg": "Area Spell Damage",
+	"mmorpg.stat.area_spell_dmg": "Area Damage",
 	"mmorpg.stat.armor": "Armor",
 	"mmorpg.stat.armor_penetration": "Armor Penetration",
 	"mmorpg.stat.armor_per_10_mana": "§7Gain §a[VAL1] §9❈ Armor§7 for each 10 §9☯ Mana§7",
 	"mmorpg.stat.arrow_cdr": "Arrow Spell Cooldown Reduction",
-	"mmorpg.stat.arrow_spell_dmg": "Arrow Spell Damage",
+	"mmorpg.stat.arrow_spell_dmg": "Arrow Damage",
 	"mmorpg.stat.aura_effect": "Aura Effect",
 	"mmorpg.stat.axe_damage": "Axe Damage",
+	"mmorpg.stat.beast_cdr": "Beast Spell Cooldown Reduction",
+	"mmorpg.stat.beast_spell_dmg": "Beast Damage",
 	"mmorpg.stat.bleed_chance": "Bleed Chance",
 	"mmorpg.stat.bleed_damage": "Bleed Damage",
 	"mmorpg.stat.bleed_duration": "Bleed Duration",
@@ -1053,11 +1055,11 @@
 	"mmorpg.stat.curse_cdr": "Curse Spell Cooldown Reduction",
 	"mmorpg.stat.curse_eff_dur_u_cast": "§7§a[VAL1]§7% to duration of Curse effects you cast.",
 	"mmorpg.stat.curse_eff_duration": "§7§a[VAL1]§7% to duration of Curse effects on you.",
-	"mmorpg.stat.curse_spell_dmg": "Curse Spell Damage",
+	"mmorpg.stat.curse_spell_dmg": "Curse Damage",
 	"mmorpg.stat.damage_cdr": "Damage Spell Cooldown Reduction",
 	"mmorpg.stat.damage_reflected": "Damage Reflected",
 	"mmorpg.stat.damage_shield": "Damage Shield",
-	"mmorpg.stat.damage_spell_dmg": "Damage Spell Damage",
+	"mmorpg.stat.damage_spell_dmg": "Damage Damage",
 	"mmorpg.stat.defensive_eff_dur_u_cast": "§7§a[VAL1]§7% to duration of Defensive effects you cast.",
 	"mmorpg.stat.defensive_eff_duration": "§7§a[VAL1]§7% to duration of Defensive effects on you.",
 	"mmorpg.stat.dex_dmg": "Ranged Damage",
@@ -1121,13 +1123,13 @@
 	"mmorpg.stat.give_taunt_stance_to_self_on_tick": "§7Give Taunt Stance to self",
 	"mmorpg.stat.golem_cdr": "Golem Spell Cooldown Reduction",
 	"mmorpg.stat.golem_damage": "Golem Damage",
-	"mmorpg.stat.golem_spell_dmg": "Golem Spell Damage",
+	"mmorpg.stat.golem_spell_dmg": "Golem Damage",
 	"mmorpg.stat.heal_cdr": "Heal Spell Cooldown Reduction",
 	"mmorpg.stat.heal_cleanse": "§7Your §e❁ Heal Spells §7have a §a[VAL1]§7% chance to cleanse a negative effect.",
 	"mmorpg.stat.heal_effect_on_self": "Healing Received",
 	"mmorpg.stat.heal_over_time_eff_dur_u_cast": "§7§a[VAL1]§7% to duration of Heal over Time effects you cast.",
 	"mmorpg.stat.heal_over_time_eff_duration": "§7§a[VAL1]§7% to duration of Heal over Time effects on you.",
-	"mmorpg.stat.heal_spell_dmg": "Heal Spell Damage",
+	"mmorpg.stat.heal_spell_dmg": "Heal Damage",
 	"mmorpg.stat.health": "Health",
 	"mmorpg.stat.health_on_all_hit": "Health on Any Hit",
 	"mmorpg.stat.health_on_attack_hit": "Health on Attack Hit",
@@ -1199,7 +1201,7 @@
 	"mmorpg.stat.more_threat_on_take_dmg": "§7You generate §a[VAL1]§7% more threat when taking damage.",
 	"mmorpg.stat.move_speed": "Move Speed",
 	"mmorpg.stat.movement_cdr": "Movement Spell Cooldown Reduction",
-	"mmorpg.stat.movement_spell_dmg": "Movement Spell Damage",
+	"mmorpg.stat.movement_spell_dmg": "Movement Damage",
 	"mmorpg.stat.negative_eff_dur_u_cast": "§7§a[VAL1]§7% to duration of Negative effects you cast.",
 	"mmorpg.stat.negative_eff_duration": "§7§a[VAL1]§7% to duration of Negative effects on you.",
 	"mmorpg.stat.non_crit_damage": "Non Critical Damage",
@@ -1230,16 +1232,16 @@
 	"mmorpg.stat.proj_dmg_received": "Projectile Damage Receieved",
 	"mmorpg.stat.projectile_cdr": "Projectile Spell Cooldown Reduction",
 	"mmorpg.stat.projectile_damage": "Projectile Damage",
-	"mmorpg.stat.projectile_spell_dmg": "Projectile Spell Damage",
+	"mmorpg.stat.projectile_spell_dmg": "Projectile Damage",
 	"mmorpg.stat.projectile_totem": "Projectile Totem",
 	"mmorpg.stat.shield_cdr": "Shield Spell Cooldown Reduction",
-	"mmorpg.stat.shield_spell_dmg": "Shield Spell Damage",
+	"mmorpg.stat.shield_spell_dmg": "Shield Damage",
 	"mmorpg.stat.shout_cdr": "Shout Spell Cooldown Reduction",
-	"mmorpg.stat.shout_spell_dmg": "Shout Spell Damage",
+	"mmorpg.stat.shout_spell_dmg": "Shout Damage",
 	"mmorpg.stat.song_cdr": "Song Spell Cooldown Reduction",
 	"mmorpg.stat.song_eff_dur_u_cast": "§7§a[VAL1]§7% to duration of Song effects you cast.",
 	"mmorpg.stat.song_eff_duration": "§7§a[VAL1]§7% to duration of Song effects on you.",
-	"mmorpg.stat.song_spell_dmg": "Song Spell Damage",
+	"mmorpg.stat.song_spell_dmg": "Song Damage",
 	"mmorpg.stat.spell_all_damage": "All Spells Damage",
 	"mmorpg.stat.spell_chaos_damage": "Chaos Spells Damage",
 	"mmorpg.stat.spell_damage": "Skill Damage",
@@ -1253,25 +1255,25 @@
 	"mmorpg.stat.spirit_cost": "Aura Cost Reduction",
 	"mmorpg.stat.staff_damage": "Staff Damage",
 	"mmorpg.stat.staff_spell_cdr": "Staff Spell Spell Cooldown Reduction",
-	"mmorpg.stat.staff_spell_spell_dmg": "Staff Spell Spell Damage",
+	"mmorpg.stat.staff_spell_spell_dmg": "Staff Spell Damage",
 	"mmorpg.stat.str_dmg": "Melee Damage",
 	"mmorpg.stat.str_dmg_received": "Melee Damage Received",
 	"mmorpg.stat.strength": "Strength",
 	"mmorpg.stat.summon_cdr": "Summon Spell Cooldown Reduction",
 	"mmorpg.stat.summon_damage": "Summon Damage",
 	"mmorpg.stat.summon_duration": "Summon Duration",
-	"mmorpg.stat.summon_spell_dmg": "Summon Spell Damage",
+	"mmorpg.stat.summon_spell_dmg": "Summon Damage",
 	"mmorpg.stat.sword_damage": "Sword Damage",
 	"mmorpg.stat.technique_cdr": "Technique Spell Cooldown Reduction",
-	"mmorpg.stat.technique_spell_dmg": "Technique Spell Damage",
+	"mmorpg.stat.technique_spell_dmg": "Technique Damage",
 	"mmorpg.stat.threat_generated": "Threat Generated",
 	"mmorpg.stat.total_damage": "Total Damage",
 	"mmorpg.stat.totem_cdr": "Totem Spell Cooldown Reduction",
 	"mmorpg.stat.totem_duration": "Totem Duration",
 	"mmorpg.stat.totem_resto": "Your Totem restoration effects are [VAL1]% stronger.",
-	"mmorpg.stat.totem_spell_dmg": "Totem Spell Damage",
+	"mmorpg.stat.totem_spell_dmg": "Totem Damage",
 	"mmorpg.stat.trap_cdr": "Trap Spell Cooldown Reduction",
-	"mmorpg.stat.trap_spell_dmg": "Trap Spell Damage",
+	"mmorpg.stat.trap_spell_dmg": "Trap Damage",
 	"mmorpg.stat.trident_damage": "Trident Damage",
 	"mmorpg.stat.unknown": "Unknown Stat",
 	"mmorpg.stat.water_any_wep_damage": "Cold Weapon Damage",
@@ -1287,6 +1289,28 @@
 	"mmorpg.stat.weapon_damage": "Weapon Damage",
 
 "_comment": " [CATEGORY]: STATS - NAMES",
+
+
+"_comment": " [CATEGORY]: UNIQUE ITEMS - NAMES",
+
+	"mmorpg.unique_gear.air_disaster.name": "Aria of Disaster",
+	"mmorpg.unique_gear.autumn_harvest.name": "Autumn Harvest",
+	"mmorpg.unique_gear.azuna_ring.name": "Azuna's Eternal Decree",
+	"mmorpg.unique_gear.bone_shatterer.name": "Bone Shatterer",
+	"mmorpg.unique_gear.ghast_necklace.name": "Ghast Tear",
+	"mmorpg.unique_gear.ghostly_shores.name": "Ghostly Shores",
+	"mmorpg.unique_gear.heavenly_tear.name": "Heavenly Tear",
+	"mmorpg.unique_gear.insight.name": "Insight",
+	"mmorpg.unique_gear.mana_dominion.name": "Dominion of Mana",
+	"mmorpg.unique_gear.playful_hope.name": "Playful Hope",
+	"mmorpg.unique_gear.rabbit_paw.name": "Rabbit's Paw",
+	"mmorpg.unique_gear.skull_of_spirits.name": "Skull of Spirits",
+	"mmorpg.unique_gear.spring_blossoms.name": "Spring Blossoms",
+	"mmorpg.unique_gear.summer_heat.name": "Summer Heat",
+	"mmorpg.unique_gear.winter_chill.name": "Winter Chill",
+	"mmorpg.unique_gear.witch_brew.name": "Witch's Brew",
+
+"_comment": " [CATEGORY]: UNIQUE ITEMS - NAMES",
 
 
 "_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
@@ -1323,28 +1347,6 @@
 	"mmorpg.gearslot.sword": "Sword",
 
 "_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
-
-
-"_comment": " [CATEGORY]: UNIQUE ITEMS - NAMES",
-
-	"mmorpg.unique_gear.air_disaster.name": "Aria of Disaster",
-	"mmorpg.unique_gear.autumn_harvest.name": "Autumn Harvest",
-	"mmorpg.unique_gear.azuna_ring.name": "Azuna's Eternal Decree",
-	"mmorpg.unique_gear.bone_shatterer.name": "Bone Shatterer",
-	"mmorpg.unique_gear.ghast_necklace.name": "Ghast Tear",
-	"mmorpg.unique_gear.ghostly_shores.name": "Ghostly Shores",
-	"mmorpg.unique_gear.heavenly_tear.name": "Heavenly Tear",
-	"mmorpg.unique_gear.insight.name": "Insight",
-	"mmorpg.unique_gear.mana_dominion.name": "Dominion of Mana",
-	"mmorpg.unique_gear.playful_hope.name": "Playful Hope",
-	"mmorpg.unique_gear.rabbit_paw.name": "Rabbit's Paw",
-	"mmorpg.unique_gear.skull_of_spirits.name": "Skull of Spirits",
-	"mmorpg.unique_gear.spring_blossoms.name": "Spring Blossoms",
-	"mmorpg.unique_gear.summer_heat.name": "Summer Heat",
-	"mmorpg.unique_gear.winter_chill.name": "Winter Chill",
-	"mmorpg.unique_gear.witch_brew.name": "Witch's Brew",
-
-"_comment": " [CATEGORY]: UNIQUE ITEMS - NAMES",
 
 
 "_comment": " [CATEGORY]: GEAR ITEMS - NAMES",
@@ -1476,6 +1478,7 @@
 	"mmorpg.stat_desc.arrow_cdr": "Reduces spell cooldown of spells with the tag.",
 	"mmorpg.stat_desc.aura_effect": "Increases stats your auras give you by %",
 	"mmorpg.stat_desc.axe_damage": "Increases damage done if it was caused by that weapon",
+	"mmorpg.stat_desc.beast_cdr": "Reduces spell cooldown of spells with the tag.",
 	"mmorpg.stat_desc.bleed_chance": "Chance to Cause the Ailment on hit. Maximum is 100%, Ailment strength is affected by the total damage dealt and all ailments accumulate, some may have caps.",
 	"mmorpg.stat_desc.bleed_damage": "Increases damage the ailment deals.",
 	"mmorpg.stat_desc.bleed_duration": "Increases duration. For DOTs, this does increase the total damage dealt, but it doesn't increase damage per second.",
